service_b/envoy-config.yaml
---
admin:
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address: {address: "127.0.0.1", port_value: 9901}
static_resources:
  listeners:
    - name: "service-b-svc-http-listener"
      address:
        socket_address: {address: "0.0.0.0", port_value: 8182}
      filter_chains:
        - filters:
            - name: "envoy.http_connection_manager"
              config:
                stat_prefix: "ingress_8182"
                codec_type: "AUTO"
                route_config:
                  name: "service-b-svc-http-route"
                  virtual_hosts:
                    - name: "service-b-svc-http-route"
                      domains: ["*"]
                      routes:
                        - match: {prefix: "/"}
                          route: {cluster: "service_b"}
                http_filters:
                  - name: "envoy.router"
  clusters:
    - name: "service_b"
      connect_timeout: "0.25s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      hosts:
        - socket_address: {address: "service_b", 8082}
